--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -92,7 +92,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('student.remediations') }}"
+                        <a class="nav-link" href="{{ url_for('remediation.list_remediations') }}"
                             style="color: #374151; font-weight: 500;">
                             <i class="fas fa-graduation-cap" style="color: #667eea;"></i> Learning Hub
                         </a>
